Project

General

Profile

Actions

Bug #21146

closed

VM_ASSERT(expr) gives bad bug report results when another ractor fails an assertion during printing of report

Bug #21146: VM_ASSERT(expr) gives bad bug report results when another ractor fails an assertion during printing of report

Added by luke-gru (Luke Gruber) over 1 year ago. Updated 21 days ago.

Status:
Closed
Assignee:
Target version:
-
[ruby-core:121093]

Description

test.rb:

rs = 100.times.map do
  Ractor.new do
    cnt = rand 3
    cnt += 1 if cnt.zero?
    sleep cnt
    100.times do |i|
      if i != 0 && i % 50 == 0
        Ractor.fail_assert
      end
    end
  end
end

ractor.rb:

def self.fail_assert
  __builtin_cexpr! %q{
    VM_ASSERT(0), Qfalse
  }
end

make run

I would like to be able to see the bug report for the first failed assertion, without any output from the other ractors.

Actions

Also available in: PDF Atom