VM_ASSERT now works well when multiple ractors fail assertion at same time

Before, multiple bug reports were printed at once, and then it would
crash due to code that handles the case where the bug report function
is being more than once. Now, the first ractor to fail an assertion
wins, and we get the bug report for the running thread in that ractor.

Fixes [Bug #21146]